# django-simple

./: pyproject.toml
movies/: admin.py  forms.py  models.py  urls.py  views.py
movies/fixtures/: movies.json
movies/migrations/: 0001_initial.py
movies/templates/movies/: base.html  detail.html  index.html  movie_get_form.html
simplesite/: settings.py  urls.py
users/migrations/: 0001_initial.py
